--- a/src/app/features/reports-v2/create-report/create-report.component.html
+++ b/src/app/features/reports-v2/create-report/create-report.component.html
@@ -1,1 +1,166 @@
-<p>create-report works!</p>
+<div class="base-content-section dashboard">
+  <div class="card">
+    <div class="card-header bg-transparent">
+       <span class="float-start">Reports</span>
+    </div>
+    <div class="card-body">
+      <div class="row">
+        <div class="col-sm-3 border-0 border-end p-4">
+          <div class="me-4">
+            <app-dynamic-breadcrumb [breadCrumbItems]="createReportBreadCrumbItems">
+            </app-dynamic-breadcrumb>
+          </div>
+          <h6 class="text-black" style="font-size: 16px; font-weight: 400;">Report name
+            <span style="color: #FB1B1B"> *</span>
+          </h6>
+          <input type="text" class="form-control form-control-sm" placeholder="Pilot report"
+                 [(ngModel)]="reportName" (input)="onReportNameChange($event)">
+          <h6 class="text-black mt-3" style="font-size: 16px; font-weight: 400;">Subject area
+            <span style="color: #FB1B1B"> *</span>
+          </h6>
+          <form [formGroup]="searchForm" class="my-3">
+            <div class="form-group">
+              <p-dropdown
+                styleClass="dropdownStyle"
+                [options]="subjectAreas"
+                optionLabel="subjectAreaName"
+                [filter]="true"
+                filterBy="subjectAreaName"
+                [showClear]="true"
+                placeholder="Select Subject Area"
+                id="subjectAreaDropdown"
+              >
+                <ng-template let-subjectArea pTemplate="item">
+                  <div class="flex align-items-center gap-2" style="font-size: 14px; font-weight: 400;">
+                    <div
+                      (click)="getCategoriesBySubjectAreaId(subjectArea)"
+                      [attr.id]="'subjectArea'+subjectArea.id"
+                    >
+                      {{ subjectArea.subjectAreaName }}
+                    </div>
+                  </div>
+                </ng-template>
+              </p-dropdown>
+            </div>
+          </form>
+
+          <div class="text-center" *ngIf="subjectAreaCategories === null; else showSubjectAreaCategories" style="padding: 4rem 0;">
+            <p-progressSpinner styleClass="w-0.5em h-0.5em " strokeWidth="3" fill="var(&#45;&#45;surface-ground)" animationDuration=".6s" ></p-progressSpinner>
+
+          </div>
+
+          <ng-template #showSubjectAreaCategories>
+
+            <p
+                class="dropdown-toggle"
+                 data-bs-toggle="collapse"
+                 href="#metricsCollapse" role="button"
+                 aria-expanded="true"
+                 aria-controls="metricsCollapse">
+              {{ metrics.name }}
+
+            </p>
+            <div class="border border-1 p-2">
+              <div *ngFor="let subCategory of metrics.subCategory">
+
+                <div class="collapse show" id="metricsCollapse">
+                  <ul
+                    class="sub-category"
+                    data-bs-toggle="collapse"
+                    [attr.data-bs-target]="'#'+subCategory.description"
+                    role="button"
+                    aria-expanded="false"
+                    aria-controls="collapseExample2"
+                    style="list-style-type: none; padding-left: 0px;"
+                  >
+                    <li class="dropdown-toggle" id="sub-category-name" style="font-size: 14px; font-weight: 400;">
+                      {{ subCategory.name }}
+                      <i class="fa fa-chevron-right float-end"></i>
+                    </li>
+                  </ul>
+
+                  <div class="collapse" [attr.id]="subCategory.description">
+                    <ul *ngFor="let categoryAreas of subCategory.categoryAreas">
+                      <li class="dropdown-toggle" id="category-areas" style="font-size: 14px; font-weight: 400;">
+                        {{ categoryAreas.name }} xxxxx
+                      </li>
+                    </ul>
+                  </div>
+
+                </div>
+
+              </div>
+            </div>
+
+
+          </ng-template>
+
+          <div class="text-center" *ngIf="metrics === null; else showFilters" style="padding: 4rem 0;">
+            <p-progressSpinner styleClass="w-0.5em h-0.5em " strokeWidth="3" fill="var(&#45;&#45;surface-ground)" animationDuration=".6s" ></p-progressSpinner>
+
+          </div>
+
+          <ng-template #showFilters>
+          <h6 class="text-black mt-3" style="font-size: 16px; font-weight: 400;">Filters</h6>
+          <div class="mt-2" *ngFor="let filterName of filters">
+
+            <p
+              class="dropdown-toggle"
+              data-bs-toggle="collapse"
+              href="#filterCollapse" role="button"
+              aria-expanded="false"
+              [attr.data-bs-target]="'#filterCollapse'"
+              aria-controls="filterCollapse">
+              {{ filterName.name }}
+              <i class="fa fa-chevron-right float-end"></i>
+
+            </p>
+            <div *ngFor="let filtersubCategory of filterName.subCategory">
+
+              <div class="collapse" id="filterCollapse">
+                <ul
+                  class="sub-category"
+                  data-bs-toggle="collapse"
+                  [attr.data-bs-target]="'#'+filtersubCategory.description"
+                  role="button"
+                  aria-expanded="false"
+                  aria-controls="category-areas"
+                  style="list-style-type: none; padding-left: 0px;"
+                >
+                  <li class="dropdown-toggle" id="sub-category-name" style="font-size: 14px; font-weight: 400;">
+                    {{ filtersubCategory.name }}
+                    <i class="fa fa-chevron-right float-end"></i>
+                  </li>
+                </ul>
+
+                <div class="collapse" [attr.id]="filtersubCategory.description">
+                  <ul *ngFor="let categoryAreas of filtersubCategory.categoryAreas">
+                    <li class="dropdown-toggle" id="category-areas" style="font-size: 14px; font-weight: 400;">
+                      {{ categoryAreas.name }}
+                    </li>
+                  </ul>
+                </div>
+
+              </div>
+
+            </div>
+          </div>
+
+
+          </ng-template>
+
+          <button class="btn btn-primary mt-3">Continue</button>
+        </div>
+
+        <div class="col-sm-8 text-center">
+          <input type="text" class="border-0 border-bottom text-center bg-transparent" placeholder="Pilot report"
+                 [(ngModel)]="reportNameRec" disabled>
+        </div>
+
+      </div>
+
+      </div>
+
+  </div>
+
+</div>
