--- a/src/app/features/gis/components/quotation/components/quick-quote-details/quick-quote-details.component.html
+++ b/src/app/features/gis/components/quotation/components/quick-quote-details/quick-quote-details.component.html
@@ -1,5 +1,5 @@
 <div class="container ">
-    <p class="title">Quotations: Quotation Data Entry</p>
+    <p class="title mt-3">Quotations: Quotation Data Entry</p>
      <app-stepper [currentStep]="1" [stepperData]="steps"></app-stepper>
      <div class="container mx-2 mt-n1">     <app-quick-quote-form></app-quick-quote-form>
      </div>
